WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 105893
[CSS Regions]Content overflowing last region displayed wrong
https://bugs.webkit.org/show_bug.cgi?id=105893
Summary
[CSS Regions]Content overflowing last region displayed wrong
Mihnea Ovidenie
Reported
2013-01-01 00:00:45 PST
For writing modes: horizontal-bt/vertical-rl, the content overflowing last region is improperly displayed.
Attachments
Patch
(16.16 KB, patch)
2013-01-01 00:11 PST
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Patch 2
(19.01 KB, patch)
2013-01-03 06:39 PST
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Patch for landing
(19.84 KB, patch)
2013-01-04 01:48 PST
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2013-01-01 00:11:14 PST
Created
attachment 180984
[details]
Patch
Mihnea Ovidenie
Comment 2
2013-01-03 06:39:40 PST
Created
attachment 181171
[details]
Patch 2 Modified also hit testing to take these writing modes into account when computing the region clipping rect.
Dave Hyatt
Comment 3
2013-01-03 08:41:40 PST
Comment on
attachment 181171
[details]
Patch 2 r=me
Mihnea Ovidenie
Comment 4
2013-01-04 01:48:36 PST
Created
attachment 181284
[details]
Patch for landing
WebKit Review Bot
Comment 5
2013-01-04 02:14:45 PST
Comment on
attachment 181284
[details]
Patch for landing Clearing flags on attachment: 181284 Committed
r138785
: <
http://trac.webkit.org/changeset/138785
>
WebKit Review Bot
Comment 6
2013-01-04 02:14:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug