[CSS Regions]Content overflowing last region displayed wrong https://bugs.webkit.org/show_bug.cgi?id=105893

Reviewed by David Hyatt.

Source/WebCore:

For the last region in the region chain and flipped writing modes (horizontal-bt, vertical-rl),
the clipping rect should take overflow into account in the writing mode direction, which is
different in these cases than the direction for non-flipped writing modes.

Tests: fast/regions/overflow-last-region-horiz-bt.html
       fast/regions/overflow-last-region-vert-lr.html
       fast/regions/overflow-last-region-vert-rl.html
       fast/regions/overflow-last-region.html

* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::computeRegionClippingRect): Helper function used to compute region clipping rect
for paint and hitTest.
(WebCore):
(WebCore::RenderFlowThread::paintFlowThreadPortionInRegion):
(WebCore::RenderFlowThread::hitTestFlowThreadPortionInRegion):
* rendering/RenderFlowThread.h:

LayoutTests:

Add tests for all writing modes with content overflowing the last region in chain.
Hit testing for content overflowing the last region is not yet supported, therefore tests
for that will be added in the future.

* fast/regions/overflow-last-region-expected.html: Added.
* fast/regions/overflow-last-region-horiz-bt-expected.html: Added.
* fast/regions/overflow-last-region-horiz-bt.html: Added.
* fast/regions/overflow-last-region-vert-lr-expected.html: Added.
* fast/regions/overflow-last-region-vert-lr.html: Added.
* fast/regions/overflow-last-region-vert-rl-expected.html: Added.
* fast/regions/overflow-last-region-vert-rl.html: Added.
* fast/regions/overflow-last-region.html: Added.


Canonical link: https://commits.webkit.org/124260@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138785 268f45cc-cd09-0410-ab3c-d52691b4dbfc